fixed vertical alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,14 @@ body{
 }
 nav#header-nav{
     background-color:#f6b319;
-    align-content:baseline;
+    align-items: normal !important;
+    align-content: normal !important;
+    padding:0;
 }
 div#logo-img{
-    background:url('../images/logo.png') no-repeat;
-    width:100px;
-    height:100px;
+    background:url('../images/restaurant-logo.png') no-repeat;
+    width:150px;
+    height:150px;
     margin: 10px 15px 15px 0;
 }
 #star{
@@ -29,7 +31,7 @@ div.navbar-brand h1{
     margin-top:0;
     margin-bottom:0;
     line-height:.75;
-    color:rgb(0, 146, 0);
+    color:#557c3e;
 }
 .navbar-brand p{
     text-transform:uppercase;
@@ -50,5 +52,18 @@ div.navbar-brand h1{
 
 .navbar-nav li{
     font-size:1.5em;
-    margin:0px 5px 5px 0;
+}
+
+a.nav-link{
+    padding:2px;
+}
+#navbar-body{
+    align-items:normal !important;
+    margin-top:18px;
+    margin-bottom:5px;
+}
+#hamburger{
+    height:40px;
+    margin-top:18px;
+    margin-bottom:5px;
 }
